# DysPositif

./: .gitignore  LICENSE  NOTICE  README.md  diagnostic_vml.py  diagnostic_vml_detailed.py  dyspositif  dyspositif.sh  main.py
config/: settings.py
converters/: __init__.py  odt_to_docx.py  pdf_to_docx.py
core/: __init__.py  a3_enlarger.py  formatter.py  lirecouleur.dic  mute_letters.py  numbers_multicolor.py  numbers_position.py  processor.py  syllables.py  syllables_and_mute.py  syllables_mute.py  utils.py
pylirecouleur/: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
pylirecouleur/lirecouleur/: constant.py  decoder.py  text.py
pylirecouleur/lirecouleur/appdata/: automaton.json  database.json
pylirecouleur_src/lirecouleur/: parser.py  word.py
pylirecouleur_src/lirecouleur/appdata/: dictionary.json
ui/: interface.py  progress.py
utils/: adobe_check.py  pdfservices-api-credentials.json
