[metadata]
name = pylirecouleur
version = 0.0.5+dysp1
description = pylirecouleur (vendored for Dys'Positif) — syllabation utilities (Arkaline, GPL v3)
long_description = file: README.md
long_description_content_type = text/markdown
author = Arkaline (vendored)
# SPDX license expression (recommended) instead of deprecated license classifier
license_expression = GPL-3.0-or-later
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    # ajouter ici les dépendances runtime si nécessaire, ex. regex

[options.packages.find]
where = .

[options.package_data]
lirecouleur = appdata/*.json